Add: exe and manual

--- a/Timer2020/Timer2020/Timer2020.csproj
+++ b/Timer2020/Timer2020/Timer2020.csproj
@@ -10,6 +10,10 @@
 	<ApplicationIcon>telescope.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="telescope.ico" />
   </ItemGroup>
